--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
 <body>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
   <div id="splash">
-    <div class="progress-bar stripes">
-      <span style="width: 0%"></span>
-    </div>
+    <div class="logo stripes"></div>
   </div>
 <script src="src/settings.js" charset="utf-8"></script>
-<script src="vconsole.min.js"></script>
 <script src="main.js" charset="utf-8"></script>
 
 <script type="text/javascript">
